--- a/references.bib
+++ b/references.bib
@@ -22,5 +22,51 @@
   year={2012},
   publisher={John Wiley \& Sons}
 }
-
-
+@Book{jm3,
+  author = "Daniel Jurafsky and James H. Martin",
+  title = "Speech and Language Processing: An Introduction to Natural Language Processing,  
+           Computational Linguistics, and Speech Recognition, with Language Models",
+  year = "2025",
+  url = {https://web.stanford.edu/~jurafsky/slp3/},
+  note = "Online manuscript released August 24, 2025",
+  edition = "3rd",
+}
+@article{mikolov2013distributed,
+  title={Distributed representations of words and phrases and their compositionality},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  journal={Advances in neural information processing systems},
+  volume={26},
+  year={2013}
+}
+@inproceedings{pennington2014glove,
+  title={Glove: Global vectors for word representation},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher D},
+  booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+  pages={1532--1543},
+  year={2014}
+}
+@inproceedings{devlin2019bert,
+  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  booktitle={Proceedings of the 2019 conference of the North American chapter of the association for computational linguistics: human language technologies, volume 1 (long and short papers)},
+  pages={4171--4186},
+  year={2019}
+}
+@article{sun2021interpreting,
+  title={Interpreting deep learning models in natural language processing: A review},
+  author={Sun, Xiaofei and Yang, Diyi and Li, Xiaoya and Zhang, Tianwei and Meng, Yuxian and Qiu, Han and Wang, Guoyin and Hovy, Eduard and Li, Jiwei},
+  journal={arXiv preprint arXiv:2110.10470},
+  year={2021}
+}
+@article{han2020explaining,
+  title={Explaining black box predictions and unveiling data artifacts through influence functions},
+  author={Han, Xiaochuang and Wallace, Byron C and Tsvetkov, Yulia},
+  journal={arXiv preprint arXiv:2005.06676},
+  year={2020}
+}
+@article{clark2019does,
+  title={What does bert look at? an analysis of bert's attention},
+  author={Clark, Kevin and Khandelwal, Urvashi and Levy, Omer and Manning, Christopher D},
+  journal={arXiv preprint arXiv:1906.04341},
+  year={2019}
+}
